Fenêtre principale et visualisation d'image du builder terminées.

--- a/src/oldSources/Builder.fxml
+++ b/src/oldSources/Builder.fxml
@@ -3,7 +3,7 @@
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<AnchorPane prefHeight="397.0" prefWidth="542.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="builder.BuilderContr">
+<AnchorPane prefHeight="397.0" prefWidth="542.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="builder.ancien.BuilderContr">
    <children>
       <VBox fx:id="vBoxControles" spacing="5.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="25.0">
          <children>
