--- a/src/main/resources/fxml/Builder.fxml
+++ b/src/main/resources/fxml/Builder.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
@@ -80,11 +81,7 @@
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                      </VBox.margin>
                   </Label>
-                  <TextField fx:id="textAreaComment" prefHeight="62.0" prefWidth="434.0">
-                     <VBox.margin>
-                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                     </VBox.margin>
-                  </TextField>
+                  <TextArea fx:id="textAreaComment" prefHeight="200.0" prefWidth="200.0" />
                </children>
             </VBox>
             <VBox alignment="TOP_CENTER" VBox.vgrow="ALWAYS">
@@ -94,11 +91,7 @@
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                      </VBox.margin>
                   </Label>
-                  <TextField fx:id="textAreaDescription" maxHeight="1.7976931348623157E308" VBox.vgrow="ALWAYS">
-                     <VBox.margin>
-                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                     </VBox.margin>
-                  </TextField>
+                  <TextArea fx:id="textAreaDescription" prefHeight="200.0" prefWidth="200.0" />
                </children>
             </VBox>
          </children>
