Serveur fonctionne avec des webjars, diverses réparations. Installer/restaurer présentation bâti, pas testé.

--- a/src/main/resources/fxml/TableauBord.fxml
+++ b/src/main/resources/fxml/TableauBord.fxml
@@ -116,13 +116,13 @@
                   </HBox>
                   <HBox>
                      <children>
-                        <Label fx:id="lblNumD" text="D :">
+                        <Label text="D :">
                            <padding>
                               <Insets left="5.0" right="5.0" />
                            </padding>
                         </Label>
                         <Region HBox.hgrow="ALWAYS" />
-                        <Label text="999">
+                        <Label fx:id="lblNumD" text="999">
                            <padding>
                               <Insets left="5.0" right="5.0" />
                            </padding>
