--- a/src/main/resources/fxml/BuilderVis.fxml
+++ b/src/main/resources/fxml/BuilderVis.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.CheckMenuItem?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
@@ -20,6 +21,7 @@
                   <MenuItem fx:id="menuEnregistrerSous" mnemonicParsing="false" onAction="#menuHandler" text="Enregistrer le graphe sous…" />
                   <SeparatorMenuItem mnemonicParsing="false" />
                   <MenuItem fx:id="menuAjuster" mnemonicParsing="false" onAction="#menuHandler" text="Ajuster à la fenêtre" />
+                  <CheckMenuItem fx:id="checkMenuPhysics" mnemonicParsing="false" text="Simulation physique" />
             </items>
           </Menu>
             <Menu fx:id="menuPlugins" mnemonicParsing="false" text="Plugins" />
