--- a/src/main/resources/fxml/TableauBord.fxml
+++ b/src/main/resources/fxml/TableauBord.fxml
@@ -1,55 +1,56 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.60"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="presentation.TabBordContrImpl">
+
+<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="presentation.TabBordContrImpl">
     <children>
         <MenuBar AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <menus>
                 <Menu fx:id="menuFichier" mnemonicParsing="false" text="Fichier">
                     <items>
-                        <MenuItem fx:id="menuOuvrirRecital" mnemonicParsing="false" onAction="#menuHandler"
-                                  text="Ouvrir récital"/>
-                        <MenuItem fx:id="menuInstaller" mnemonicParsing="false" onAction="#menuHandler"
-                                  text="Installer écrans"/>
-                        <MenuItem fx:id="menuRestaurer" mnemonicParsing="false" onAction="#menuHandler"
-                                  text="Restaurer écrans"/>
-                        <MenuItem mnemonicParsing="false" onAction="#menuHandler" text="Fermer"/>
+                        <MenuItem fx:id="menuOuvrirRecital" mnemonicParsing="false" onAction="#menuHandler" text="Ouvrir récital" />
+                        <MenuItem fx:id="menuInstaller" mnemonicParsing="false" onAction="#menuHandler" text="Installer écrans" />
+                        <MenuItem fx:id="menuRestaurer" mnemonicParsing="false" onAction="#menuHandler" text="Restaurer écrans" />
+                        <MenuItem mnemonicParsing="false" onAction="#menuHandler" text="Fermer" />
                     </items>
                 </Menu>
                 <Menu mnemonicParsing="false" text="Navigation">
                     <items>
-                        <MenuItem fx:id="menuNaviguerAuTexton" mnemonicParsing="false" onAction="#menuHandler"
-                                  text="Naviguer au texton"/>
-                        <MenuItem mnemonicParsing="false" onAction="#menuHandler" text="Précédent"/>
-                        <MenuItem fx:id="menuLienA" mnemonicParsing="false" onAction="#menuHandler" text="Lien A"/>
-                        <MenuItem fx:id="menuLienB" mnemonicParsing="false" onAction="#menuHandler" text="Lien B"/>
-                        <MenuItem fx:id="menuLienC" mnemonicParsing="false" onAction="#menuHandler" text="Lien C"/>
-                        <MenuItem fx:id="menuLienD" mnemonicParsing="false" onAction="#menuHandler" text="Lien D"/>
-                        <MenuItem fx:id="menuConclusion" mnemonicParsing="false" onAction="#menuHandler"
-                                  text="Conclusion"/>
+                        <MenuItem fx:id="menuNaviguerAuTexton" mnemonicParsing="false" onAction="#menuHandler" text="Naviguer au texton" />
+                        <MenuItem mnemonicParsing="false" onAction="#menuHandler" text="Précédent" />
+                        <MenuItem fx:id="menuLienA" mnemonicParsing="false" onAction="#menuHandler" text="Lien A" />
+                        <MenuItem fx:id="menuLienB" mnemonicParsing="false" onAction="#menuHandler" text="Lien B" />
+                        <MenuItem fx:id="menuLienC" mnemonicParsing="false" onAction="#menuHandler" text="Lien C" />
+                        <MenuItem fx:id="menuLienD" mnemonicParsing="false" onAction="#menuHandler" text="Lien D" />
+                        <MenuItem fx:id="menuConclusion" mnemonicParsing="false" onAction="#menuHandler" text="Conclusion" />
                     </items>
                 </Menu>
             </menus>
         </MenuBar>
-        <HBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
-              AnchorPane.topAnchor="25.0">
+        <HBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="25.0">
             <children>
                 <AnchorPane HBox.hgrow="ALWAYS">
                     <children>
-                        <SplitPane dividerPositions="0.6596858638743456" orientation="VERTICAL" prefHeight="200.0"
-                                   prefWidth="160.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
-                                   AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <SplitPane dividerPositions="0.6596858638743456" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                             <items>
-                                <AnchorPane fx:id="anchorPaneTabBord" minHeight="0.0" minWidth="0.0"/>
+                                <AnchorPane fx:id="anchorPaneTabBord" minHeight="0.0" minWidth="0.0" />
                                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                                     <children>
-                                        <TextArea fx:id="textAreaTexte" prefHeight="200.0" AnchorPane.bottomAnchor="0.0"
-                                                  AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
-                                                  AnchorPane.topAnchor="0.0"/>
+                                        <TextArea fx:id="textAreaTexte" prefHeight="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                                     </children>
                                 </AnchorPane>
                             </items>
@@ -62,13 +63,13 @@
                             <children>
                                 <Label text="Enreg. :">
                                     <padding>
-                                        <Insets left="5.0" right="5.0"/>
+                                        <Insets left="5.0" right="5.0" />
                                     </padding>
                                 </Label>
-                                <Region HBox.hgrow="ALWAYS"/>
+                                <Region HBox.hgrow="ALWAYS" />
                                 <Label fx:id="lblNumEnr" text="999">
                                     <padding>
-                                        <Insets left="5.0" right="5.0"/>
+                                        <Insets left="5.0" right="5.0" />
                                     </padding>
                                 </Label>
                             </children>
@@ -77,13 +78,13 @@
                             <children>
                                 <Label text="A :">
                                     <padding>
-                                        <Insets left="5.0" right="5.0"/>
+                                        <Insets left="5.0" right="5.0" />
                                     </padding>
                                 </Label>
-                                <Region HBox.hgrow="ALWAYS"/>
+                                <Region HBox.hgrow="ALWAYS" />
                                 <Label fx:id="lblNumA" text="999">
                                     <padding>
-                                        <Insets left="5.0" right="5.0"/>
+                                        <Insets left="5.0" right="5.0" />
                                     </padding>
                                 </Label>
                             </children>
@@ -92,13 +93,13 @@
                             <children>
                                 <Label text="B :">
                                     <padding>
-                                        <Insets left="5.0" right="5.0"/>
+                                        <Insets left="5.0" right="5.0" />
                                     </padding>
                                 </Label>
-                                <Region HBox.hgrow="ALWAYS"/>
+                                <Region HBox.hgrow="ALWAYS" />
                                 <Label fx:id="lblNumB" text="999">
                                     <padding>
-                                        <Insets left="5.0" right="5.0"/>
+                                        <Insets left="5.0" right="5.0" />
                                     </padding>
                                 </Label>
                             </children>
@@ -107,13 +108,13 @@
                             <children>
                                 <Label text="C :">
                                     <padding>
-                                        <Insets left="5.0" right="5.0"/>
+                                        <Insets left="5.0" right="5.0" />
                                     </padding>
                                 </Label>
-                                <Region HBox.hgrow="ALWAYS"/>
+                                <Region HBox.hgrow="ALWAYS" />
                                 <Label fx:id="lblNumC" text="999">
                                     <padding>
-                                        <Insets left="5.0" right="5.0"/>
+                                        <Insets left="5.0" right="5.0" />
                                     </padding>
                                 </Label>
                             </children>
@@ -122,86 +123,84 @@
                             <children>
                                 <Label text="D :">
                                     <padding>
-                                        <Insets left="5.0" right="5.0"/>
+                                        <Insets left="5.0" right="5.0" />
                                     </padding>
                                 </Label>
-                                <Region HBox.hgrow="ALWAYS"/>
+                                <Region HBox.hgrow="ALWAYS" />
                                 <Label fx:id="lblNumD" text="999">
                                     <padding>
-                                        <Insets left="5.0" right="5.0"/>
+                                        <Insets left="5.0" right="5.0" />
                                     </padding>
                                 </Label>
                             </children>
                         </HBox>
                         <VBox fx:id="vBoxButtons" alignment="CENTER">
                             <children>
-                                <Button fx:id="btnTermine" mnemonicParsing="false" onAction="#handleButtonAction"
-                                        text="Terminé">
+                                <Button fx:id="btnTermine" mnemonicParsing="false" onAction="#handleButtonAction" text="Terminé">
                                     <VBox.margin>
-                                        <Insets bottom="5.0" top="5.0"/>
+                                        <Insets bottom="5.0" top="5.0" />
                                     </VBox.margin>
                                 </Button>
-                                <CheckBox fx:id="checkBoxPhysics" mnemonicParsing="false" text="Physique"
-                                          visible="false"/>
+                                <CheckBox fx:id="checkBoxPhysics" mnemonicParsing="false" text="Physique" visible="false" />
                             </children>
                         </VBox>
-                        <Separator prefWidth="200.0"/>
+                        <Separator prefWidth="200.0" />
                         <VBox alignment="CENTER">
                             <children>
                                 <Label text="Texton courant :" wrapText="true">
                                     <font>
-                                        <Font name="System Bold" size="12.0"/>
+                                        <Font name="System Bold" size="12.0" />
                                     </font>
                                 </Label>
                             </children>
                         </VBox>
                         <HBox>
                             <children>
-                                <Label fx:id="lblNomTexton" text="Nom du texton" wrapText="true"/>
+                                <Label fx:id="lblNomTexton" text="Nom du texton" wrapText="true" />
                             </children>
                         </HBox>
                         <HBox>
                             <children>
-                                <Label text="Num. :"/>
-                                <Region HBox.hgrow="ALWAYS"/>
-                                <Label fx:id="lblNumTexton" text="999"/>
+                                <Label text="Num. :" />
+                                <Region HBox.hgrow="ALWAYS" />
+                                <Label fx:id="lblNumTexton" text="999" />
                             </children>
                         </HBox>
-                        <Label text="Source :"/>
-                        <TextArea fx:id="textAreaSource" VBox.vgrow="ALWAYS"/>
+                        <Label text="Source :" />
+                        <TextArea fx:id="textAreaSource" VBox.vgrow="ALWAYS" />
                         <VBox alignment="CENTER">
                             <children>
                                 <Label text="Minuteries :" underline="true">
                                     <font>
-                                        <Font name="System Bold" size="12.0"/>
+                                        <Font name="System Bold" size="12.0" />
                                     </font>
                                 </Label>
                             </children>
                         </VBox>
                         <HBox>
                             <children>
-                                <Label text="Texton"/>
-                                <Region HBox.hgrow="ALWAYS"/>
-                                <Label fx:id="lblHorlTexton" text="00:00:00"/>
+                                <Label text="Texton" />
+                                <Region HBox.hgrow="ALWAYS" />
+                                <Label fx:id="lblHorlTexton" text="00:00:00" />
                             </children>
                         </HBox>
                         <HBox>
                             <children>
-                                <Label text="Récital"/>
-                                <Region HBox.hgrow="ALWAYS"/>
-                                <Label fx:id="lblHorlRecital" text="00:00:00"/>
+                                <Label text="Récital" />
+                                <Region HBox.hgrow="ALWAYS" />
+                                <Label fx:id="lblHorlRecital" text="00:00:00" />
                             </children>
                         </HBox>
                         <HBox>
                             <children>
-                                <Label text="Horloge"/>
-                                <Region HBox.hgrow="ALWAYS"/>
-                                <Label fx:id="lblHorloge" text="00:00:00"/>
+                                <Label text="Horloge" />
+                                <Region HBox.hgrow="ALWAYS" />
+                                <Label fx:id="lblHorloge" text="00:00:00" />
                             </children>
                         </HBox>
                     </children>
                     <padding>
-                        <Insets left="2.0" right="2.0"/>
+                        <Insets left="2.0" right="2.0" />
                     </padding>
                 </VBox>
             </children>
